--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,11 @@
     "redis": "^4.6.10",
     "sqlite3": "^5.1.6",
     "ml-regression": "^6.0.1",
-    "technicalindicators": "^3.1.0"
+    "technicalindicators": "^3.1.0",
+    "dotenv": "^16.4.5",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
